# quantum-gates

./: .readthedocs.yaml  CITATION.cff  LICENSE  README.md  main.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml
docs/: requirements.txt
docs/source/: circuits.rst  conf.py  gates.rst  index.rst  metrics.rst  qiskit_provider.rst  simulators.rst  utilities.rst
docs/tutorials/notebooks/: noise_scaling_demo.ipynb  tutorial_noise_scaling_demo.ipynb
src/quantum_gates/: __init__.py  backends.py  circuits.py  gates.py  simulators.py  testing.ipynb  utilities.py
src/quantum_gates/_gates/: gates.py
src/quantum_gates/_qiskit_provider/: ng_backend.py  ng_provider.py
src/quantum_gates/_simulation/: backend.py  circuit.py  simulator.py
src/quantum_gates/_utility/: RotatedSurfaceCodeLoom.py  circ_optimizer.py  device_parameters.py  rotated_surface_code.py  rotated_surface_code_small.py  simulations_utility.py  surface_code.py
start up and testing/: AER_testing_statevector.ipynb  Noise_Analysis.ipynb  PR  Simulator_SC_vs_AER.ipynb  global_library_backend_test.ipynb  local_backend_test.ipynb  test noise channel.ipynb  test_permutation_library_vs_AER.ipynb  testing_local_library_surfacecode.ipynb
start up and testing/new tests/: new_measurement_scaling.ipynb  new_test_permutation_library_vs_AER.ipynb  test noise channel.ipynb  test_noise_scaling_on_4_q_SC.ipynb
tests/: profiling.py
tests/gates/: test_gates.py  test_noise_scaling.py  test_specific_device_parameters.py
tests/helpers/: device_parameters.py  functions.py  paths.py
tests/qiskit_provider/: test_ng_provider.py
tests/simulation/: test_AER_vs_simulator.py  test_anderson_simulator.py  test_backend.py  test_circuit.py  test_mid_circuit.py  test_mid_measure_scaling.py  test_reset_qubit.py  test_rotated_surface_code.py  test_simulator_internals.py  test_statevector_readout.py  test_two_qubit_gate.py
tests/utility/: test_device_parameters.py  test_opt_algo.py  test_simulation_utility.py  test_sv_permutations.py
