[build-system]
requires = [
    "setuptools>=42",
    "wheel",
	"flit_core >=3.2,<4",
	"build"
]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-gates"
authors = [
	{name = "G. Di Bartolomeo", email = "dibartolomeo.giov@gmail.com"},
	{name = "M. Vischi", email = "vischimichele@gmail.com"},
	{name = "F. Cesa"},
	{name = "M. Grossi", email = "michele.grossi@cern.ch"},
	{name = "S. Donadi"},
	{name = "A. Bassi"},
	{name = "P. Da Rold", email = "paolo.darold@studenti.units.it"},
	{name = "C. Christen", email = "cherilyn.christen@epfl.ch"},
	{name = "N. Pacey", email = "npacey01@gmail.com"},
	{name = "G. Crognaletti", email = "giulio.crognaletti@phd.units.it"},
	{name = "R. Wixinger", email = "roman.wixinger@gmail.com"}
]
dynamic = ["version", "description", "readme", "requires-python", "license", "classifiers", "dependencies", "optional-dependencies"]
