[metadata]
name = quantum-gates
version = 2.4.0
author = G. Di Bartolomeo, M. Vischi, F. Cesa, M. Grossi, S. Donadi, A. Bassi, P. Da Rold, C. Christen, N. Pacey, G. Crognaletti, R. Wixinger
author_email = dibartolomeo.giov@gmail.com, vischimichele@gmail.com, michele.grossi@cern.ch, paolo.darold@studenti.units.it, cherilyn.christen@epfl.ch, npacey01@gmail.com, giulio.crognaletti@phd.units.it, roman.wixinger@gmail.com
description = Quantum Noisy Gates Simulation with Python
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/CERN-QTI/quantum-gates/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Mathematics

[options]
zip_safe = False
package_dir =
    = src
packages=find:
python_requires = >=3.9
install_requires =
    numpy>=1.22
    qiskit-aer>=0.17.0
    qiskit>=2.0
    qiskit-ibm-runtime>=0.39.0
    scipy
    matplotlib
    pylatexenc
    opt-einsum
    pytest
    pylint
    python-dotenv
    build
    pymatching       

[options.packages.find]
where = src

[options.extras_require]
demo =
    jupyter
docs =
    sphinx>=4.5.0
    sphinx-rtd-theme>=1.0.0
